gallery save as

--- a/Comfizen/App.xaml
+++ b/Comfizen/App.xaml
@@ -38,6 +38,7 @@
         <local:InvertBooleanConverter x:Key="InvertBooleanConverter"/>
         <local:BooleanAndConverter x:Key="BooleanAndConverter"/>
         <local:StringToVisibilityConverter x:Key="StringToVisibilityConverter"/>
+        <local:BoolToStringConverter x:Key="BoolToStringConverter"/>
         
         
         
