seed limit options
# Conflicts:
#	Comfizen/Views/UIConstructor.xaml

--- a/Comfizen/App.xaml
+++ b/Comfizen/App.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Comfizen"
              xmlns:global="clr-namespace:"
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              Startup="Application_Startup">
     <Application.Resources>
         
