--- a/Comfizen/MainWindow.xaml
+++ b/Comfizen/MainWindow.xaml
@@ -769,6 +769,33 @@
                                                               IsChecked="{Binding SelectedTab.WorkflowInputsController.IsXyGridEnabled, Mode=TwoWay}"
                                                               FontWeight="Bold" Margin="0,0,0,10" />
 
+                                                    <!-- START OF NEW SECTION: Grid Mode -->
+                                                    <GroupBox Header="{local:Translate XYGrid_Mode}" Margin="0,0,0,10">
+                                                        <StackPanel>
+                                                            <StackPanel Orientation="Horizontal">
+                                                                <RadioButton Content="{local:Translate XYGrid_ModeImage}" GroupName="GridMode"
+                                                                             IsChecked="{Binding SelectedTab.WorkflowInputsController.GridMode, Converter={StaticResource EnumToBooleanConverter}, ConverterParameter={x:Static local:XYGridMode.Image}}"/>
+                                                                <RadioButton Content="{local:Translate XYGrid_ModeVideo}" GroupName="GridMode" Margin="15,0,0,0"
+                                                                             IsChecked="{Binding SelectedTab.WorkflowInputsController.GridMode, Converter={StaticResource EnumToBooleanConverter}, ConverterParameter={x:Static local:XYGridMode.Video}}"/>
+                                                            </StackPanel>
+                                                            <StackPanel Orientation="Horizontal" Margin="20,8,0,0">
+                                                                <StackPanel.Style>
+                                                                    <Style TargetType="StackPanel">
+                                                                        <Setter Property="Visibility" Value="Collapsed"/>
+                                                                        <Style.Triggers>
+                                                                            <DataTrigger Binding="{Binding SelectedTab.WorkflowInputsController.GridMode}" Value="{x:Static local:XYGridMode.Video}">
+                                                                                <Setter Property="Visibility" Value="Visible"/>
+                                                                            </DataTrigger>
+                                                                        </Style.Triggers>
+                                                                    </Style>
+                                                                </StackPanel.Style>
+                                                                <TextBlock Text="{local:Translate XYGrid_FrameCount}" VerticalAlignment="Center" Margin="0,0,10,0"/>
+                                                                <xctk:IntegerUpDown Value="{Binding SelectedTab.WorkflowInputsController.VideoGridFrames, Mode=TwoWay}" Minimum="1" Maximum="16" Width="60"/>
+                                                            </StackPanel>
+                                                        </StackPanel>
+                                                    </GroupBox>
+                                                    <!-- END OF NEW SECTION -->
+
                                                     <StackPanel Margin="15,0,0,10">
                                                         <CheckBox Content="{local:Translate XYGrid_CreateGridImage}"
                                                                   IsChecked="{Binding SelectedTab.WorkflowInputsController.XyGridCreateGridImage, Mode=TwoWay}" />
